<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_professor_detail">ProfessorDetailActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading_title">Loading</string>
    <string name="please_wait">Please wait</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="office">Office:</string>
    <string name="phone">Phone:</string>
    <string name="e_mail">E-mail:</string>
    <string name="rating">Rating:</string>
    <string name="comments">Comments:</string>
    <string name="comment_hint">Enter comment</string>
    <string name="submit">Submit</string>

</resources>
